<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:binding="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.mvvmhabit.jiemai.login.LoginJieMaiViewModel"/>
        <variable
            name="viewModel"
            type="LoginJieMaiViewModel" />
    </data>
    <LinearLayout
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:background="@color/bg_color"
        android:orientation="vertical"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <include
            android:id="@+id/include"
            binding:toolbarViewModel = "@{viewModel.toolbarViewModel}"
            layout="@layout/layout_toolbar"/>

        <LinearLayout
            android:gravity="center_vertical"
            android:background="@color/white"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:layout_width="80dp"
                android:gravity="center"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:text="账  号"/>
            <EditText
                android:text="@={viewModel.userName}"
                android:id="@+id/username"
                android:background="@null"
                android:textSize="13sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />
        </LinearLayout>

        <LinearLayout
            android:background="@color/white"
            android:layout_marginTop="1dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <TextView
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:layout_width="80dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="密  码"/>
            <EditText
                android:textSize="13sp"
                android:background="@null"
                android:text="@={viewModel.passWord}"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true"
              />

        </LinearLayout>


        <TextView
            android:padding="10dp"
            binding:onClickCommand="@{viewModel.loginNetClick}"
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:background="@drawable/bg_green"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:textSize="14sp"
            android:text="@string/action_sign_in"
            android:gravity="center"
            android:textColor="@color/white"
          />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            binding:layout_constraintBottom_toBottomOf="parent"
            binding:layout_constraintEnd_toEndOf="@+id/password"
            binding:layout_constraintStart_toStartOf="@+id/password"
            binding:layout_constraintTop_toTopOf="parent"
            binding:layout_constraintVertical_bias="0.3" />
    </LinearLayout>
</layout>
